--- a/src/components/markdown-editor/panels/input.scss
+++ b/src/components/markdown-editor/panels/input.scss
@@ -1,6 +1,6 @@
 @mixin dimensions {
   width: calc(100% - 10px);
-  height: 100%;
+  height: 550px;
   min-height: 3.8rem;
   margin: 0 2px 0 2px;
   border: none;
